# cndp

./: .clang-format  .cndpstyle.rb  .dockerignore  .editorconfig  .gitignore  .golangci.yml  .markdownlint.json  .mdlrc  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  VERSION  cndp-codespell.precommit-toml  meson.build  meson_options.txt
examples/: meson.build
examples/afxdp/: afxdp_fwd.c  afxdp_user.c  meson.build
examples/afxdp_user/: main.c  meson.build
examples/cli/: main.c  main.h  meson.build
examples/cndp-frr/: README.md
examples/cndp-frr/docker/: Dockerfile  cnetfrr-graph.jsonc  cnetfwd-graph.jsonc
examples/cndp-frr/scripts/: cleanup-demo.sh  setup-demo.sh
examples/cndpfwd/: acl-func.c  fwd.jsonc  hs-fwd.c  l3-fwd.c  main.c  main.h  meson.build  parse-args.c  stats.c
examples/cnet-graph/: cnet-graph.c  cnet-graph.h  cnetfwd-graph.jsonc  meson.build  parse-args.c  stats.c
examples/cnet-quic/: README.md  cnet-quic.c  cnet-quic.h  meson.build  parse-args.c  quic-cli.c  quic.jsonc  stats.c
examples/dlb_test/: README.md  dlb_test.c  dlb_test.h  dlb_test.jsonc  meson.build  parse-args.c  stats.c
examples/helloworld/: main.c  meson.build
examples/ibroker/: handler.c  main.c  main.h  meson.build  parse-args.c
examples/l3fwd-graph/: fwd.c  fwd.h  l3fwd-graph.jsonc  meson.build  parse-args.c  stats.c
examples/phil/: main.c  main.h  meson.build  parse-args.c  phil.c  phil.h  phil.jsonc
examples/rtc-m2/: main.c  main.h  meson.build  parse-args.c  rtc-m2.jsonc  stats.c
examples/shared_mempool/: meson.build  proc.c  proc.h  proc_1.c  run_proc.sh
examples/timer/: main.c  meson.build
examples/vpp-plugin/: .clang-format  README.md
examples/vpp-plugin/cndp/: CMakeLists.txt  cli.c  cndp.h  cndp_elog.h  device.c  format.c  input.c  output.c  setup.txt  startup.conf
lang/rs/mmap/: Cargo.toml
lang/rs/pktfwd/: Cargo.toml  build.rs  fwd.jsonc  runcmd.sh  wrapper.h
lang/rs/ring_test/: Cargo.toml  build.rs  wrapper.h
lib/cnet/: meson.build
lib/cnet/arp/: arp_request.c  arp_request_priv.h  cnet_arp.c  cnet_arp.h  meson.build
lib/cnet/chnl/: chnl_callback.c  chnl_callback_priv.h  chnl_open.c  chnl_open_priv.h  chnl_priv.h  chnl_recv.c  chnl_recv_priv.h  chnl_send.c  chnl_send_priv.h  cnet_chnl.c  cnet_chnl.h  cnet_chnl_opt.c  cnet_chnl_opt.h  meson.build
lib/cnet/cmds/: cnet_cmds.c  meson.build
lib/cnet/cnet/: cnet.c  cnet.h  meson.build
lib/cnet/drv/: cnet_drv.c  cnet_drv.h  meson.build
lib/cnet/eth/: cnet_eth.h  eth_node_api.h  eth_rx.c  eth_rx_priv.h  eth_tx.c  eth_tx_priv.h  meson.build
lib/cnet/gtpu/: gtpu.c  gtpu_priv.h  meson.build
lib/cnet/icmp6/: cnet_icmp6.c  cnet_icmp6.h  cnet_icmp6_chnl.c  icmp6.h  icmp6_input.c  icmp6_input_priv.h  icmp6_output.c  icmp6_output_priv.h  meson.build
lib/cnet/incs/: cnet_const.h  cnet_ether.h  cnet_fib_info.h  cnet_inet.h  cnet_inet4.h  cnet_ip_common.h  cnet_meta.h  cnet_node_names.h  cnet_pkt.h  cnet_rarp.h  meson.build
lib/cnet/ipv4/: cnet_ipv4.c  cnet_ipv4.h  ip4_forward.c  ip4_forward_priv.h  ip4_input.c  ip4_input_priv.h  ip4_node_api.h  ip4_output.c  ip4_output_priv.h  ip4_proto.c  ip4_proto_priv.h  meson.build
lib/cnet/ipv6/: cnet_ipv6.c  cnet_ipv6.h  ip6_flowlabel.c  ip6_flowlabel.h  ip6_forward.c  ip6_forward_priv.h  ip6_input.c  ip6_input_priv.h  ip6_node_api.h  ip6_output.c  ip6_output_priv.h  ip6_proto.c  ip6_proto_priv.h  meson.build
lib/cnet/nd6/: cnet_nd6.c  cnet_nd6.h  meson.build  nd6.c  nd6.h  nd6_request.c  nd6_request_priv.h
lib/cnet/netif/: cnet_netif.c  cnet_netif.h  meson.build
lib/cnet/netlink/: cnet_netlink.c  cnet_netlink.h  meson.build  netlink_private.h  nl_addr.c  nl_link.c  nl_neigh.c  nl_route.c
lib/cnet/nodes/: drop.c  meson.build  null.c  pkt_ctrl.c
lib/cnet/pcb/: cnet_pcb.c  cnet_pcb.h  meson.build
lib/cnet/protosw/: cnet_protosw.c  cnet_protosw.h  meson.build
lib/cnet/ptype/: meson.build  ptype.c  ptype_priv.h
lib/cnet/punt/: kernel_recv.c  kernel_recv_priv.h  meson.build  punt_ether_kernel.c  punt_ether_kernel_priv.h  punt_kernel.c  punt_kernel_priv.h  tun_alloc.c  tun_alloc.h
lib/cnet/reg/: cnet_reg.c  cnet_reg.h  meson.build
lib/cnet/route/: cnet_route.h  cnet_route4.c  cnet_route4.h  cnet_route6.c  cnet_route6.h  meson.build
lib/cnet/sbin/: cnet_ifshow.c  cnet_ifshow.h  cnet_rtshow.c  cnet_rtshow.h  meson.build
lib/cnet/stk/: cnet_stk.c  cnet_stk.h  meson.build
lib/cnet/tcp/: cnet_tcp.c  (+10 more)
lib/common/: meson.build
lib/core/: meson.build
lib/include/: cne_atomic.h  cne_branch_prediction.h  cne_byteorder.h  cne_common.h  cne_cpuflags.h  cne_cpuid.h  cne_cycles.h  cne_gettid.h  cne_inet.h  cne_inet4.h  cne_inet6.h  cne_isa.h  cne_lock_annotations.h  cne_lport.h  cne_mutex_helper.h  cne_pause.h  cne_per_thread.h  cne_pktcpy.h  cne_prefetch.h  cne_rtm.h  cne_rwlock.h  cne_spinlock.h  cne_strings.h  cne_tailq.h  cne_test.h  cne_vec.h  cne_vect.h  cne_vect_generic.h  cne_version.h  cne_xmmt_ops.h  meson.build
test/common/: meson.build  test.c  test.h  tst_info.c  tst_info.h
test/fuzz/: README.md  cli_input.cc  cne_log.cc  mempool_create.cc  meson.build  mmap_alloc.cc  uds_create.cc
test/testcne/: acl_test.c  acl_test.h  acl_test_data.h  cli_cmds.c  cne_register_test.c  cne_register_test.h  cthread_test.c  cthread_test.h  dsa_test.c  dsa_test.h  fib6_perf_test.c  fib6_test.c  fib_perf_test.c  fib_test.c  fib_test.h  graph_perf_test.c  graph_test.c  graph_test.h  hash_perf_test.c  hash_test.c  hash_test.h  hmap_test.c  hmap_test.h  ibroker_test.c  ibroker_test.h  idlemgr_test.c  idlemgr_test.h  jcfg_test.c  jcfg_test.h  kvargs_test.c  kvargs_test.h  log_test.c  log_test.h  loop_test.c  loop_test.h  lpm6_data_test.h  mbuf_test.c  mbuf_test.h  mempool_test.c  mempool_test.h  (+44 more)
usrtools/: meson.build
usrtools/cnectl/: cnectl.c  meson.build
usrtools/jsonc2json/: jsonc2json.c  meson.build
usrtools/txgen/: INSTALL.md  LICENSE  README.md  changelog.txt  meson.build  txgen.jsonc  xdp.cfg
usrtools/xskmap_load_send/: README.md  meson.build  xskmap_load_send.c  xskmap_load_send.h
(+797 files in other folders)
