# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2019-2022 Intel Corporation.

[package]
name = "pktfwd"
version = "0.1.0"
authors = ["Manoj Gopalakrishnan <manoj.gopalakrishnan@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.86"
pnet = "0.27.2"
log = {version = "0.4", features = ["max_level_trace", "release_max_level_info"]}

[build-dependencies]
bindgen = "0.57.0"
meson = "1.0.0"
pkg-config = "0.3.19"

[profile.release]
# Without enabling lto, packet processing with pnet is slow.
# For example, without lto, pnet get/set mac address is ~50% slower.
lto = true

# Uncomment to enable debug symbols for profiling.
debug = 2
